Add auth virtual domanins and virtual users

--- a/dovecot/conf.d/15-lda.conf
+++ b/dovecot/conf.d/15-lda.conf
@@ -45,4 +45,9 @@
 protocol lda {
   # Space separated list of plugins to load (default is global mail_plugins).
   #mail_plugins = $mail_plugins
+  auth_socket_path = /var/run/dovecot/auth-master
+  hostname = enginetech.store
+  mail_plugin_dir = /usr/lib/dovecot/modules
+  mail_plugins = sive
+  postmaster_address = postmaster@enginetech.store
 }
