--- a/dovecot/conf.d/10-mail.conf
+++ b/dovecot/conf.d/10-mail.conf
@@ -27,7 +27,8 @@
 #
 # <doc/wiki/MailLocation.txt>
 #
-mail_location = maildir:~/Maildir
+#mail_location = maildir:~/Maildir
+mail_location = maildir:/var/mail/vhosts/%d/%n
 #############mail_location = mbox:~/mail:INBOX=/var/mail/%u
 # If you need to set multiple mailbox locations or want to change default
 # namespace settings, you can do it by defining namespace sections.
