--- a/dovecot/conf.d/10-master.conf
+++ b/dovecot/conf.d/10-master.conf
@@ -104,10 +104,23 @@ service auth {
   }
 
   # Postfix smtp-auth
+  #unix_listener /var/spool/postfix/private/auth {
+  #  mode = 0666
+  #  user = postfix
+  #  group = postfix
+  #}
+  
   unix_listener /var/spool/postfix/private/auth {
-    mode = 0666
-    user = postfix
-    group = postfix
+    mode = 0660
+    user = vmail
+    group = vmail
+  }
+
+  unix_listener auth-master {
+      group = vmail
+      mode = 0600
+      user = vmail
+
   }
 
   # Auth process is run as this user.
