--- a/opendkim.conf
+++ b/opendkim.conf
@@ -12,7 +12,7 @@ LogWhy			yes
 # and thus somewhat security sensitive.
 Canonicalization	relaxed/simple
 Mode			sv
-SubDomains		no
+SubDomains		yes
 
 AutoRestart		yes
 AutoRestartRate		10/1h
